link to code.org, collapse form, bugfix in name

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,2 @@
 .monster-container { position:relative; }
 .monster-container img { position:absolute; top:0; left:0; max-width:100%; height:auto; }
-
-#random { margin-top:50px; }
